--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "massive": "^4.8.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
+  "proxy": "http://localhost: 3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
